--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     </head>
     <body>
         <div class="calc-container">
-            <div class="display">000000</div>
+            <div class="display"></div>
             <div class="options">
                 <button class="clear">clear</button>
                 <button class="delete">delete</button>
             </div>
             <div class="keys">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
                 <button class="calculate">/</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
                 <button class="calculate">x</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
                 <button class="calculate">-</button>
-                <button class="calculate">.</button>
-                <button>0</button>
+                <button class="number" class="calculate" id="decimal">.</button>
+                <button class="number" id="0">0</button>
                 <button class="calculate">=</button>
                 <button class="calculate">+</button>
             </div>
