Only one decimal may exist within the display at a time

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button class="number" id="2">2</button>
                 <button class="number" id="3">3</button>
                 <button class="calculate">-</button>
-                <button class="number" class="calculate" id="decimal">.</button>
+                <button class="calculate" id="decimal">.</button>
                 <button class="number" id="0">0</button>
                 <button class="calculate">=</button>
                 <button class="calculate">+</button>
