--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
                 <button class="delete">delete</button>
             </div>
             <div class="keys">
-                <button class="number" id="7">7</button>
-                <button class="number" id="8">8</button>
-                <button class="number" id="9">9</button>
-                <button class="calculate">/</button>
-                <button class="number" id="4">4</button>
-                <button class="number" id="5">5</button>
-                <button class="number" id="6">6</button>
-                <button class="calculate">x</button>
-                <button class="number" id="1">1</button>
-                <button class="number" id="2">2</button>
-                <button class="number" id="3">3</button>
-                <button class="calculate">-</button>
-                <button class="calculate" id="decimal">.</button>
-                <button class="number" id="0">0</button>
-                <button class="calculate">=</button>
-                <button class="calculate">+</button>
+                <button class="key" class="number" id="7">7</button>
+                <button class="key" class="number" id="8">8</button>
+                <button class="key" class="number" id="9">9</button>
+                <button class="key" class="calculate">/</button>
+                <button class="key" class="number" id="4">4</button>
+                <button class="key" class="number" id="5">5</button>
+                <button class="key" class="number" id="6">6</button>
+                <button class="key" class="calculate">x</button>
+                <button class="key" class="number" id="1">1</button>
+                <button class="key" class="number" id="2">2</button>
+                <button class="key" class="number" id="3">3</button>
+                <button class="key" class="calculate">-</button>
+                <button class="key" class="calculate" id="decimal">.</button>
+                <button class="key" class="number" id="0">0</button>
+                <button class="key" class="calculate">=</button>
+                <button class="key" class="calculate">+</button>
             </div>
         </div>
     </body>
