--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <script src="main.js" defer></script>
+        <script src="test.js" defer></script>
+
         <title>Calculator</title>
     </head>
     <body>
@@ -18,19 +20,19 @@
                 <button class="number key" id="7">7</button>
                 <button class="number key" id="8">8</button>
                 <button class="number key" id="9">9</button>
-                <button class="calculate key">/</button>
+                <button class="calculate key operator">/</button>
                 <button class="number key" id="4">4</button>
                 <button class="number key" id="5">5</button>
                 <button class="number key" id="6">6</button>
-                <button class="calculate key">x</button>
+                <button class="calculate key operator">x</button>
                 <button class="number key" id="1">1</button>
                 <button class="number key" id="2">2</button>
                 <button class="number key" id="3">3</button>
-                <button class="calculate key">-</button>
+                <button class="calculate key operator">-</button>
                 <button class="calculate key" id="decimal">.</button>
                 <button class="number key" id="0">0</button>
                 <button class="calculate key" id="equals">=</button>
-                <button class="calculate key">+</button>
+                <button class="calculate key operator">+</button>
             </div>
         </div>
     </body>
